@@ -1,4 +1,4 @@
-/* $Id: acconfig.h,v 1.171 2004/01/05 11:36:52 dtucker Exp $ */
+/* $Id: acconfig.h,v 1.172 2004/01/23 11:03:10 dtucker Exp $ */
 
 /*
  * Copyright (c) 1999-2003 Damien Miller.  All rights reserved.
@@ -256,8 +256,8 @@
 /* Define this if you are using the Heimdal version of Kerberos V5 */
 #undef HEIMDAL
 
-/* Define this if you want to use Heimdal's AFS support */
-#undef AFS
+/* Define this if you want to use libkafs' AFS support */
+#undef USE_AFS
 
 /* Define if you want S/Key support */
 #undef SKEY
