@@ -58,7 +58,7 @@ RCSID("$OpenBSD: session.c,v 1.171 2004/01/13 19:23:15 markus Exp $");
 #include "session.h"
 #include "monitor_wrap.h"
 
-#ifdef KRB5
+#if defined(KRB5) && defined(USE_AFS)
 #include <kafs.h>
 #endif
 
@@ -1425,7 +1425,7 @@ do_child(Session *s, const char *command)
 	 */
 	environ = env;
 
-#if defined(KRB5) && defined(AFS)
+#if defined(KRB5) && defined(USE_AFS)
 	/*
 	 * At this point, we check to see if AFS is active and if we have
 	 * a valid Kerberos 5 TGT. If so, it seems like a good idea to see
